# django-news

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/charts/: admin.py  apps.py  models.py  urls.py  views.py
apps/comments/: admin.py  models.py  urls.py  views.py
apps/groups/: models.py
apps/home/: views.py
apps/markets/: models.py
apps/panel/: urls.py  views.py
apps/posts/: admin.py  apps.py  models.py  urls.py  views.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
news/: settings.py  urls.py
resources/front/css/: base.css  home.css
templates/: stock_complex.html  stock_simple.html
templates/front/: base.html  category.html  home.html  post.html
templates/users/: login.html  register.html
