[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["KoishiMoe <68314080+KoishiMoe@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2,<5.0"
mysqlclient = ">=2.1.1,<2.2.0"
pillow = "^9.5.0"
django-bootstrap-v5 = "^1.0.11"
django-summernote = "^0.8.20.0"
fontawesomefree = "^6.4.0"
django-jazzmin = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
